updated properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,8 @@ spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
 #logging.level.liquibase = info
 spring.liquibase.user=postgres
 spring.liquibase.password=postgres
+
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+
