--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,15 +2,17 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      java: corretto8
-    commands:
-    - pip install --upgrade awscli
+      java: corretto11
   pre_build:
     commands:
-    - mvn clean compile test
+    - echo In the pre_build phase...
   build:
     commands:
-    - mvn war:exploded
+    - echo Build started on `date`
+    - mvn install
+  post_build:
+    commands:
+    - echo Build completed on `date`
 artifacts:
   files:
   - target/vehicle-listing-0.0.1-SNAPSHOT.war
