--- a/pom.xml
+++ b/pom.xml
@@ -100,12 +100,12 @@
 					<dependency>
 						<groupId>org.junit.platform</groupId>
 						<artifactId>junit-platform-surefire-provider</artifactId>
-						<version>${junit.platform.version}</version>
+						<version>1.2.0</version>
 					</dependency>
 					<dependency>
 						<groupId>org.junit.jupiter</groupId>
 						<artifactId>junit-jupiter-engine</artifactId>
-						<version>${junit.jupiter.version}</version>
+						<version>5.2.0</version>
 					</dependency>
 				</dependencies>
 			</plugin>
