--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
 					</dependency>
 				</dependencies>
 			</plugin>
-			<plugin>
+			<!-- <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
@@ -131,7 +131,7 @@
 						-Amapstruct.defaultComponentModel=spring
 					</compilerArgs>
 				</configuration>
-			</plugin>
+			</plugin> -->
 		</plugins>
 	</build>
 </project>
