--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,10 +6,11 @@ phases:
   pre_build:
     commands:
     - echo In the pre_build phase...
+    - mvn clean compile test
   build:
     commands:
     - echo Build started on `date`
-    - mvn clean install
+    - mvn war:exploded
   post_build:
     commands:
     - echo Build completed on `date`
