--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,11 +10,10 @@ phases:
   build:
     commands:
     - echo Build started on `date`
-    - mvn clean install
+    - mvn package
   post_build:
     commands:
     - echo Build completed on `date`
-    - cp -r .ebextensions/ target/ROOT/
 artifacts:
   files:
   - target/vehicle-listing-0.0.1-SNAPSHOT.war
