--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>vehicle-listing</name>
 	<description>Micro-service for vehicle listing</description>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<properties>
 		<java.version>1.8</java.version>
