--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,6 @@
 server.port=8085
 spring.profiles.active=local
+server.servlet.context-path=/vehicle-inventory
 
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/vehicle-listing?sslmode=disable
