--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,10 +9,10 @@ phases:
   build:
     commands:
     - echo Build started on `date`
-    - mvn clean install
   post_build:
     commands:
     - echo Build completed on `date`
+    - mvn package
     - mv target/vehicle-listing-0.0.1-SNAPSHOT.war vehicle-listing-0.0.1-SNAPSHOT.war
 artifacts:
   files:
