--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 server.port=8080
 spring.profiles.active=dev
-server.servlet.context-path=/vehicle-inventory
+server.servlet.contextPath=
 
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://vehiclerentingservice.cniojyptlukb.ap-south-1.rds.amazonaws.com/vehicle-listing?sslmode=disable
