--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,15 @@
 server.port=8080
 spring.profiles.active=dev
 
+server.error.include-stacktrace=never
+
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://vehiclerentingservice.cniojyptlukb.ap-south-1.rds.amazonaws.com/vehicle-listing?sslmode=disable
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.database=POSTGRESQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
 #https://stackoverflow.com/questions/42135114/how-does-spring-jpa-hibernate-ddl-auto-property-exactly-work-in-spring
@@ -23,6 +26,7 @@ spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
 #logging.level.liquibase = info
 spring.liquibase.user=postgres
 spring.liquibase.password=postgres
+#spring.liquibase.enabled=true
 
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
