modified add new inventory API to save images to S3

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,7 +7,7 @@ server.error.include-stacktrace=never
 spring.datasource.url=jdbc:postgresql://vehiclerentingservice.cniojyptlukb.ap-south-1.rds.amazonaws.com/vehicle-listing?sslmode=disable
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=Passw0rd
 spring.jpa.database=POSTGRESQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
@@ -25,10 +25,16 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
 #logging.level.liquibase = info
 spring.liquibase.user=postgres
-spring.liquibase.password=postgres
+spring.liquibase.password=Passw0rd
 #spring.liquibase.enabled=true
 
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
+## AWS Configuration
+s3.bucket.url=https://car-renting-service-images.s3.ap-south-1.amazonaws.com/
+aws.access.key=AKIAIPI5T3XW3Y3I2UFQ
+aws.secret.access.key=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
+aws.region=AP_SOUTH_1
+s3.bucket.name=car-renting-service-images
