--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,8 +13,8 @@ phases:
     commands:
     - echo Build completed on `date`
     - mvn package
-    - mv target/vehicle-listing-0.0.1-SNAPSHOT.war vehicle-listing-0.0.1-SNAPSHOT.war
+    - mv target/vehicle-listing-0.0.1-SNAPSHOT.jar vehicle-listing-0.0.1-SNAPSHOT.jar
 artifacts:
   files:
-  - vehicle-listing-0.0.1-SNAPSHOT.war
+  - vehicle-listing-0.0.1-SNAPSHOT.jar
   - .ebextensions/**/*
