--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 HELP.md
 target/
+src/main/resources/application.properties
+src/main/resources/application-dev.properties
+src/main/resources/application-local.properties
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
