changed properties file

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -32,8 +32,8 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## AWS Configuration
-s3.bucket.url=https://car-renting-service-images.s3.ap-south-1.amazonaws.com/
-aws.access.key=AKIAIPI5T3XW3Y3I2UFQ
-aws.secret.access.key=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
-aws.region=AP_SOUTH_1
-s3.bucket.name=car-renting-service-images
+s3.bucket.url=
+aws.access.key=
+aws.secret.access.key=
+aws.region=
+s3.bucket.name=
