--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,10 +4,10 @@ spring.profiles.active=dev
 server.error.include-stacktrace=never
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://vehiclerentingservice.cniojyptlukb.ap-south-1.rds.amazonaws.com/vehicle-listing?sslmode=disable
+spring.datasource.url=
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=Passw0rd
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.database=POSTGRESQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
@@ -24,8 +24,8 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 ## Liquibase Conf
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
 #logging.level.liquibase = info
-spring.liquibase.user=postgres
-spring.liquibase.password=Passw0rd
+spring.liquibase.user=
+spring.liquibase.password=
 #spring.liquibase.enabled=true
 
 ## default connection pool
@@ -33,8 +33,8 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## AWS Configuration
-s3.bucket.url=https://car-renting-service-images.s3.ap-south-1.amazonaws.com/
-aws.access.key=AKIAIPI5T3XW3Y3I2UFQ
-aws.secret.access.key=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
-aws.region=AP_SOUTH_1
-s3.bucket.name=car-renting-service-images
+s3.bucket.url=
+aws.access.key=
+aws.secret.access.key=
+aws.region=
+s3.bucket.name=
